--- a/style.css
+++ b/style.css
@@ -390,12 +390,12 @@ select{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 30px;
+    margin-top: 90px;
     margin-bottom: 58px;
 }
 
 .supplements{
-    margin-top: 58px;
+    margin-top: 30px;
 }
 .supp{
     width: 300px;
@@ -405,12 +405,9 @@ select{
 
 
 
-
-
-
 .full-footer{
     background-color: rgba(255, 255, 255, 0.1);
-    padding: 66px 190px;
+    padding: 66px 190px 0px;
 }
 
 
@@ -425,11 +422,19 @@ select{
     font-style: italic;
     font-size: 70px;
     color: #E6533C; 
+    margin-top: 0px;
+    margin-bottom: 20px;
 }
 
 .copyright{
     display: flex;
     justify-content: center;
-    border-top: solid 1px white;
+    border-top: solid 1px rgba(255, 255, 255, 0.1);
+    padding: 36px 0px 36px;
+}
+
+.footer{
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 23px;
 }
 
